# rf-detr_plus

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-package.yml  check-license-headers.yml  ci-tests-cpu.yml  ci-tests-gpu.yml  pr-conflict-labeler.yml  publish-pre-release.yml  publish-release.yml
src/: LICENSE_HEADER.txt
src/rfdetr_plus/: __init__.py
src/rfdetr_plus/assets/: __init__.py  model_weights.py
src/rfdetr_plus/models/: __init__.py  detection.py  downloads.py
tests/: conftest.py  test_inference.py  test_inference_gpu.py  test_version.py
