[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfdetr-plus"
dynamic = ["version"]
description = "RF-DETR+ Extension Package"
readme = "README.md"
authors = [
    {name = "Roboflow, Inc", email = "develop@roboflow.com"}
]
license = "LicenseRef-PML-1.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
keywords = ["machine-learning", "deep-learning", "vision", "ML", "DL", "AI", "DETR", "RF-DETR", "Roboflow"]

dependencies = [
    "rfdetr>=1.4.1,<2",
]

[project.optional-dependencies]

[dependency-groups]
build = [
    "twine>=5.1.1",
    "wheel>=0.40",
    "build>=0.10"
]

tests = [
  "pytest>=7.2.2,<10",
  "pytest-cov>=4,<8",
]

dev = [
    "pre-commit>=4.5.1,<5",
]

[project.urls]
Homepage = "https://github.com/roboflow/rf-detr-plus"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "rfdetr_plus.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rfdetr_plus*"]

[tool.setuptools.package-data]
rfdetr_plus = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]
extend-select = [
  "A",   # flake8-builtins - https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
  "PT",  # pytest - https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "Q",   # flake8-quotes - https://docs.astral.sh/ruff/rules/#flake8-quotes-q
  "RUF", # Ruff-specific rules - https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "S",   # bandit - https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = [
  "RUF012",  # TODO: Mutable class attributes should be annotated with `typing.ClassVar`
]
per-file-ignores."tests/**" = [
  "S101",  # Use of `assert` detected
]

[tool.pytest.ini_options]
addopts = [
    "-v",                   # verbose output
    "--color=yes",          # colored output
]
markers = [
    "gpu: tests that require GPU or are slow on CPU",
]

[tool.codespell]
skip = "*.pth"
